<resources>
    <string name="app_name">Hale</string>
    <string name="action_settings">Settings</string>
    <string name="btn_activity_back">Back</string>

    <!-- 引导页 -->
    <string name="title_activity_main">Hale</string>
    <string name="btn_login">Sign in</string>
    <string name="btn_register">Sign up</string>
    <string name="hello_world">Hello world!</string>

    <!-- 登录页 -->
    <string name="title_activity_login">LoginActivity</string>
    <string name="hint_et_login_no">Phone Number/QQ/WeChat</string>
    <string name="hint_et_login_pwd">Password</string>
    <string name="cb_show_pwd">show password</string>
    <string name="tv_pwd_forget">forget password</string>
    <string name="tv_label_login_pattern">Sign in via</string>
    <string name="btn_login_pattern_qq">QQ</string>
    <string name="btn_login_pattern_wechat">WeChat</string>
    <string name="btn_login_pattern_weibo">Weibo</string>

    <!-- 注册页 -->
    <string name="title_activity_register">RegisterActivity</string>
    <string name="btn_step_previous">Previous</string>
    <string name="btn_step_next">Next</string>

    <!-- 注册之电话号码验证 PhoneFragment -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_et_phone_reg">Phone Number</string>
    <string name="btn_captcha_req">Captcha</string>
    <string name="hint_et_validate_code_input">validate code</string>
    <string name="btn_captcha_submit">Submit</string>

    <!-- 注册值个人资料填写 InfoRegFragment -->
    <string name="hint_et_nick_name_reg">nick name</string>
    <string name="hint_et_pwd_reg">password</string>
    <string name="hint_et_pwd_retype_reg">retype password</string>
    <string name="hint_et_qq_reg">QQ</string>
    <string name="btn_info_reg_submit">Submit</string>

    <!-- Home页 -->
    <string name="title_activity_home">HomeActivity</string>
    <string name="tv_activity_title_message">Recently</string>
    <string name="tv_activity_title_roster">Buddies</string>
    <string name="tv_activity_title_account">Account</string>
    <string name="tv_list_chat">Message</string>
    <string name="tv_list_friend">Buddies</string>
    <string name="tv_account_management">Account</string>
    <string name="tv_menu_drop_down">dropdown</string>
    <string name="menu_action_scan">Scan</string>
    <string name="menu_action_resource">Resource</string>
    <string name="menu_action_maintain">Maintain</string>

    <!-- BuddyFragment -->
    <string name="tv_fragment_buddy">BuddyFragment</string>

    <!-- AccountFragment -->
    <string name="tv_fragment_account">AccountFragment</string>
    <string name="tv_account_item_settings">@string/title_activity_settings</string>


    <!-- 聊天页 -->
    <string name="title_activity_chat">Chat with %s</string>
    <string name="btn_send">Send</string>
    <string name="action_text">Text</string>
    <string name="action_image">Image</string>
    <string name="action_select_image">Select Image</string>
    <string name="action_voice">Voice</string>
    <string name="btn_voice_record">Hold and Speak loudly</string>
    <string name="btn_voice_record_up">Release and Send voice </string>

    <!-- 设置页 -->
    <string name="title_activity_settings">@string/action_settings</string>
    <string name="tv_settings_item_about">About Us</string>
    <string name="tv_settings_item_exit">Exit</string>

    <!-- 关于 -->
    <string name="title_activity_about">About</string>
    <string name="tv_app_name_version_code">Hale V%s</string>
    <string name="tv_about_item_guide">Guideline</string>
    <string name="tv_about_item_suggestion">Feedback</string>
    <string name="tv_about_item_version">Check New Version</string>



</resources>