<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             tools:context="net.pingfang.signalr.chat.fragment.InfoRegFragment">

    <EditText android:id="@+id/et_nick_name_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_et_nick_name_reg"/>

    <EditText android:id="@+id/et_pwd_reg"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/hint_et_pwd_reg"/>

    <EditText android:id="@+id/et_pwd_retype_reg"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/hint_et_pwd_retype_reg"/>

    <EditText android:id="@+id/et_qq_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_et_qq_reg"/>

    <Button android:id="@+id/btn_info_reg_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_info_reg_submit"/>

</LinearLayout>
