<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:gravity="center_horizontal"
             tools:context="net.pingfang.signalr.chat.fragment.PhoneFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText android:id="@+id/et_phone_reg"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="phone|numberDecimal"
                  android:singleLine="true"
                  android:minWidth="200dp"
                  android:hint="@string/hint_et_phone_reg"/>

        <Button android:id="@+id/btn_captcha_req"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/btn_captcha_req"/>

    </RelativeLayout>


    <EditText android:id="@+id/et_validate_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_et_validate_code_input"/>

    <Button android:id="@+id/btn_captcha_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_captcha_submit"/>

</LinearLayout>
