<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="net.pingfang.xmpp.activity.HomeActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView android:id="@+id/tv_activity_title"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_centerInParent="true"
                  android:padding="@dimen/padding_activity_title"
                  android:text="@string/tv_activity_title_history"
                  android:textSize="@dimen/text_size_activity_title" />

    </RelativeLayout>

    <FrameLayout android:id="@+id/fl_container"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1">

        <android.support.v4.view.ViewPager
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button android:id="@+id/btn_list_chat"
                android:text="@string/tv_list_chat"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

        <Button android:id="@+id/btn_list_friend"
                android:text="@string/tv_list_friend"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

        <Button android:id="@+id/btn_account_management"
                android:text="@string/tv_account_management"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

    </LinearLayout>


</LinearLayout>
